--- a/DataStructures/StackAndQueueTests/StackAndQueueTests.csproj
+++ b/DataStructures/StackAndQueueTests/StackAndQueueTests.csproj
@@ -48,11 +48,18 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="QueueTests.cs" />
+    <Compile Include="StackTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StackAndQueue2\StackAndQueue.csproj">
+      <Project>{5fff496b-a2bf-4acd-aec3-5f47192027be}</Project>
+      <Name>StackAndQueue</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
